--- a/packages/portfolio/components/RetroGrid/RetroGrid.module.css
+++ b/packages/portfolio/components/RetroGrid/RetroGrid.module.css
@@ -1,6 +1,7 @@
 .grid {
-  filter: drop-shadow(3px 3px 6px var(--color-accent));
+  filter: drop-shadow(3px 3px 5px var(--color-accent));
   overflow: visible;
+  box-shadow: 0px 3px 8px 0px var(--color-accent);
 }
 
 .gridLine {
